@@ -58,6 +58,7 @@ public:
     }
 
     double value() const { return value_; }
+    Object toExact() const;
     Object toRatnum() const;
     bool isNan() const { return isnan(value_); }
     bool isInfinite() const { return isinf(value_); }
